// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureProperties should render 1`] = `
<table
  className="eui-yScrollWithShadows mapFeatureTooltip_table"
>
  <tbody>
    <tr
      className="mapFeatureTooltip_row"
      key="prop1"
    >
      <td
        className="eui-textOverflowWrap mapFeatureTooltip__propertyLabel"
      >
        prop1
      </td>
      <td
        className="eui-textOverflowWrap"
        dangerouslySetInnerHTML={
          Object {
            "__html": "foobar1",
          }
        }
      />
      <td />
    </tr>
    <tr
      className="mapFeatureTooltip_row"
      key="prop2"
    >
      <td
        className="eui-textOverflowWrap mapFeatureTooltip__propertyLabel"
      >
        prop2
      </td>
      <td
        className="eui-textOverflowWrap"
        dangerouslySetInnerHTML={
          Object {
            "__html": "foobar2",
          }
        }
      />
      <td />
    </tr>
  </tbody>
</table>
`;

exports[`FeatureProperties should show error message if unable to load tooltip content 1`] = `
<EuiCallOut
  color="danger"
  iconType="alert"
  size="s"
  title="Unable to load tooltip content"
>
  <p>
    Simulated load properties error
  </p>
</EuiCallOut>
`;

exports[`FeatureProperties should show filter button for filterable properties 1`] = `
<table
  className="eui-yScrollWithShadows mapFeatureTooltip_table"
>
  <tbody>
    <tr
      className="mapFeatureTooltip_row"
      key="prop1"
    >
      <td
        className="eui-textOverflowWrap mapFeatureTooltip__propertyLabel"
      >
        prop1
      </td>
      <td
        className="eui-textOverflowWrap"
        dangerouslySetInnerHTML={
          Object {
            "__html": "foobar1",
          }
        }
      />
      <td>
        <EuiButtonEmpty
          aria-label="Filter on property"
          data-test-subj="mapTooltipCreateFilterButton"
          iconType="filter"
          onClick={[Function]}
          size="xs"
          title="Filter on property"
        />
      </td>
    </tr>
    <tr
      className="mapFeatureTooltip_row"
      key="prop2"
    >
      <td
        className="eui-textOverflowWrap mapFeatureTooltip__propertyLabel"
      >
        prop2
      </td>
      <td
        className="eui-textOverflowWrap"
        dangerouslySetInnerHTML={
          Object {
            "__html": "foobar2",
          }
        }
      />
      <td />
    </tr>
  </tbody>
</table>
`;

exports[`FeatureProperties should show view actions button when there are available actions 1`] = `
<table
  className="eui-yScrollWithShadows mapFeatureTooltip_table"
>
  <tbody>
    <tr
      className="mapFeatureTooltip_row"
      key="prop1"
    >
      <td
        className="eui-textOverflowWrap mapFeatureTooltip__propertyLabel"
      >
        prop1
      </td>
      <td
        className="eui-textOverflowWrap"
        dangerouslySetInnerHTML={
          Object {
            "__html": "foobar1",
          }
        }
      />
      <td>
        <EuiFlexGroup
          gutterSize="xs"
        >
          <EuiFlexItem
            grow={false}
          >
            <EuiButtonEmpty
              aria-label="Filter on property"
              data-test-subj="mapTooltipCreateFilterButton"
              iconType="filter"
              onClick={[Function]}
              size="xs"
              title="Filter on property"
            />
          </EuiFlexItem>
          <EuiFlexItem
            grow={false}
          >
            <EuiButtonEmpty
              aria-label="View filter actions"
              iconType="arrowRight"
              onClick={[Function]}
              size="xs"
              title="View filter actions"
            />
          </EuiFlexItem>
        </EuiFlexGroup>
      </td>
    </tr>
    <tr
      className="mapFeatureTooltip_row"
      key="prop2"
    >
      <td
        className="eui-textOverflowWrap mapFeatureTooltip__propertyLabel"
      >
        prop2
      </td>
      <td
        className="eui-textOverflowWrap"
        dangerouslySetInnerHTML={
          Object {
            "__html": "foobar2",
          }
        }
      />
      <td />
    </tr>
  </tbody>
</table>
`;
